# bc-scraper2

./: Cargo.toml
data/: Cargo.toml
data/src/: lib.rs
opt/: Cargo.toml
opt/src/: data.rs  lib.rs  sim.rs
opt/src/phys/: acc.rs  dist.rs  mod.rs  pos.rs  vec.rs  vel.rs
phys/: Cargo.toml
phys/src/: pos.rs  vec.rs
sim/: Cargo.toml
sim/src/: lib.rs
src/: data.rs  fps.rs  main.rs  scrape.rs  sim.rs  ui.rs  web.rs
src/background/: mod.rs  scrape.rs  web.rs
src/phys/: acc.rs  dist.rs  mod.rs  pos.rs  rand.rs  vec.rs  vel.rs
