[package]
name = "opt"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
index_many = { version = "0.6.1", default-features = false }
mint = { version = "0.5.9", default-features = false }
noisy_float = { version = "0.2.0", default-features = false }
num-traits = { version = "0.2.15", default-features = false }
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
rand_distr = { version = "0.4.3", default-features = false }
rayon = { version = "1.3.0", default-features = false }
