[package]
name = "phys"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
noisy_float = { version = "0.2.0", default-features = false }
num-traits = { version = "0.2.15", default-features = false }
mint = { version = "0.5.9", default-features = false }
rand = { version = "0.8.5", default-features = false }
